task_2/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mia-middleware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - "/api"
