task_2/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mia-backend
  labels:
    app: mia-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mia-backend
  template:
    metadata:
      labels:
        app: mia-backend
    spec:
      containers:
        - name: mia-multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
