task_2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: mia-backend-svc
spec:
  ports:
    - name: multitool
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: mia-backend
  type: ClusterIP
