task_2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: mia-frontend-svc
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: mia-frontend
  type: ClusterIP
