task_2/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mia-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      middlewares:
      - name: mia-middleware
        namespace: default
      services:
        - name: mia-backend-svc
          port: 80
